Fix spacing within pattern header component

--- a/src/css/organisms/pattern-bg-header.scss
+++ b/src/css/organisms/pattern-bg-header.scss
@@ -2,6 +2,7 @@
   background-color: $color-black;
   color: $color-white;
   clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  margin-bottom: -12px;
   padding: 64px 0 80px;
   position: relative;
 
@@ -52,7 +53,10 @@
 .pattern-bg-header-subtitle {
   font-family: 'Zilla Slab';
   font-size: 18px;
-  margin-bottom: 0;
+
+  p {
+    margin-bottom: 0;
+  }
 }
 
 .pattern-bg-header-details {
